Broadway CHAIN - SANDBOX/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Accommodation_wanted_in_5_years__c</fullName>
        <inlineHelpText>What kind of accommodation the client would realistically like to be living in in 5 years time</inlineHelpText>
        <label>Accommodation wanted in 5 years</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accommodation_wanted_in_6_months_to_year__c</fullName>
        <inlineHelpText>What kind of accommodation the client would realistically like to be living in in 6 months to year from now</inlineHelpText>
        <label>Accommodation wanted in 6 months to year</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accommodation_wanted_in_next_3_months__c</fullName>
        <inlineHelpText>What kind of accommodation the client would realistically like to be living in in the next 3 months</inlineHelpText>
        <label>Accommodation wanted in next 3 months</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <inlineHelpText>Use the Action Plan field to record outreach related information about the client</inlineHelpText>
        <label>Action Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan_last_edited__c</fullName>
        <label>Action Plan last edited</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action_Plan_last_edited_by__c</fullName>
        <label>Westminster Action Plan last edited</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_plan_edited__c</fullName>
        <label>Action plan edited</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advice_service_e_g_Day_Centre_CAB__c</fullName>
        <label>Advice service (e.g. Day Centre, CAB)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>NULLVALUE(FLOOR((Date_of_death__c  -  Birthdate) / 365.2425),FLOOR((Today() -  Birthdate) / 365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_override_admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Age override (admin)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known/stated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <formula>If( Number_of_client_alerts_apex__c =0,&quot;&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M4gj&quot;, &quot;exclamation&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_outstanding_1__c</fullName>
        <label>Amount outstanding 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_outstanding_2__c</fullName>
        <label>Amount outstanding 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_outstanding_3__c</fullName>
        <label>Amount outstanding 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_accommodation_notes__c</fullName>
        <label>Location of any accommodation outside UK</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Armed_forces_2__c</fullName>
        <inlineHelpText>Select not known if client is asked about their armed forces history but cannot answer yes or no</inlineHelpText>
        <label>Armed forces</label>
        <picklist>
            <picklistValues>
                <fullName>Not selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessment_Variance__c</fullName>
        <formula>Most_recent_BBS_stage_1_assessment_apex__c  -  First_accessed_day_centre_Passage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_variance_stage_2__c</fullName>
        <formula>Most_recent_BBS_stage_2_assessment_apex__c -First_accessed_day_centre_Passage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment variance (stage 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attended_NSNO_Hub__c</fullName>
        <formula>If(  Count_of_NSNO_Hub_attendances_apex__c  &gt;0,IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3XW&quot;, &quot;tick&quot;, 20, 20),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended NSNO Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended_Passage_DC_since_NSNO_Hub__c</fullName>
        <formula>IF ( Most_recent_Passage_DC_attendance__c &gt;  First_accessed_NSNO_Hub__c , &quot;Yes&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended Passage DC since NSNO Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBS_Stage_1_completed__c</fullName>
        <formula>If( ISBLANK(   Most_recent_BBS_stage_1_assessment_apex__c ) ,IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3Xb&quot;, &quot;cross&quot;, 20, 20),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3XW&quot;, &quot;tick&quot;, 20, 20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBS Stage 1 completed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banned_CSTM__c</fullName>
        <formula>IF ( Most_recent_serious_alert_expiry__c =DATEVALUE(&quot;2099-01-01&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M4gj&quot;, &quot;permanent exclusion&quot;, 30, 30), IF (today()&lt;Most_recent_exclusion_CSTM__c,IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3os&quot;, &quot;temporary exclusion&quot;, 60, 60),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Excluded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banned_Passage__c</fullName>
        <formula>If( OR(today()&gt;Most_recent_exclusion_Passage__c,ISBLANK( Most_recent_exclusion_Passage__c )),&quot;&quot;,IF(Most_recent_exclusion_Passage__c=DATEVALUE(&quot;2099-01-01&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M4gj&quot;, &quot;permanent exclusion&quot;, 30, 30),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3os&quot;, &quot;temporary exclusion&quot;, 30, 30)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banned (Passage)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barred_from_NSNO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barred from NSNO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Barriers_to_employment__c</fullName>
        <label>Barriers to employment</label>
        <picklist>
            <picklistValues>
                <fullName>Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA will pinch my wages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fear that they will end up in McDonalds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It doesn’t pay to go to work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Qualifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No bank account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People don’t hire ex cons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance use</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Basic_skills__c</fullName>
        <label>Basic skills/needs</label>
        <picklist>
            <picklistValues>
                <fullName>Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numeracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLAIT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Status__c</fullName>
        <label>Benefit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Job Seekers Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Support Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Living Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incapacity Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupational Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severe Disablement Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working Tax Credits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Benefit - Sanction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Benefit - In Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Benefit - Immigration NRPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Benefit - EEA ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Benefit - In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Benefit - No Claim Chosen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Big_Issue_seller__c</fullName>
        <label>Big Issue seller</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_certificate_information__c</fullName>
        <label>Birth certificate information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate_admin_only__c</fullName>
        <description>Editable only by system admin</description>
        <label>Birthdate (admin only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borough_Last_Seen_Rough_Sleeping__c</fullName>
        <label>Borough Last Seen Rough Sleeping</label>
        <picklist>
            <picklistValues>
                <fullName>Camden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lambeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barking &amp; Dagenham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bexley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bromley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croydon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenwich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hackney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hammersmith &amp; Fulham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haringey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Havering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hillingdon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hounslow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kensington &amp; Chelsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kingston upon Thames</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lewisham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redbridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sutton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tower Hamlets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Borough__c</fullName>
        <label>Borough</label>
        <picklist>
            <picklistValues>
                <fullName>Barking &amp; Dagenham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bexley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bromley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croydon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenwich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hackney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hammersmith &amp; Fulham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haringey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Havering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hillingdon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hounslow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kensington &amp; Chelsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kingston upon Thames</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lambeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lewisham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redbridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sutton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tower Hamlets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Borough_first_rough_sleeping_apex__c</fullName>
        <label>Borough First Seen Rough Sleeping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEE__c</fullName>
        <formula>IF( OR(ISPICKVAL(Nationality__c,&quot;Czech Republic&quot;),ISPICKVAL(Nationality__c,&quot;Estonia&quot;),ISPICKVAL(Nationality__c,&quot;Hungary&quot;),ISPICKVAL(Nationality__c,&quot;Latvia&quot;),ISPICKVAL(Nationality__c,&quot;Lithuania&quot;),ISPICKVAL(Nationality__c,&quot;Poland&quot;),ISPICKVAL(Nationality__c,&quot;Slovenia&quot;),ISPICKVAL(Nationality__c,&quot;Slovakia&quot;),ISPICKVAL(Nationality__c, &quot;Bulgaria&quot;),ISPICKVAL(Nationality__c,&quot;Romania&quot;)),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHAIN_team_notes__c</fullName>
        <label>CHAIN team notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRISIS_at_Christmas_Centre__c</fullName>
        <label>CRISIS at Christmas Centre</label>
        <picklist>
            <picklistValues>
                <fullName>Outreach Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women’s Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Gate (dependency)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day centre only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRISIS_fast_track__c</fullName>
        <formula>If( ISPICKVAL(  CRISIS_at_Christmas_Centre__c  ,&quot;&quot;), &quot;&quot;, If( ISPICKVAL(  CRISIS_at_Christmas_Centre__c  ,&quot;Day centre only&quot;),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C00000026F07&quot;, &quot;CRISIS&quot;, 20, 60), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C00000026Bxy&quot;, &quot;CRISIS&quot;, 20, 60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRISIS fast-track</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRISIS_status_amended_by__c</fullName>
        <label>CRISIS status amended by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSTM_Client_ID__c</fullName>
        <label>CSTM Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSTM_Internal__c</fullName>
        <formula>IF (ISPICKVAL( CSTM_assessment_outcome__c ,&quot;&quot;), IF (ISPICKVAL ( CSTM_action_required__c ,&quot;&quot;), IF (ISPICKVAL ( Green_Star__c ,&quot;&quot;),&quot;&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001aebh&quot;,&quot;Green star&quot;,30,30)), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001MC4O&quot;, &quot;Action required&quot;, 30, 30)), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001MC3k&quot;, &quot;Client refused&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSTM Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSTM_Key_Worker_or_Passage_Key_Worker__c</fullName>
        <formula>IF ( NOT ( ISBLANK ( Keyworker_Westminster__c  )) , Keyworker_Westminster__r.FirstName &amp;&quot; &quot;&amp; Keyworker_Westminster__r.LastName,   Keyworker_Passage__r.FirstName &amp; &quot; &quot; &amp;   Keyworker_Passage__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSTM Key Worker or Passage Key Worker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSTM_Outcome_Beki__c</fullName>
        <formula>IF (ISPICKVAL( CSTM_assessment_outcome__c ,&quot;&quot;), IF (ISPICKVAL ( CSTM_action_required__c ,&quot;&quot;), IF (ISPICKVAL ( Green_Star__c ,&quot;&quot;),&quot;&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001aebh&quot;,&quot;Green star&quot;,30,30)), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001MC4O&quot;, &quot;Action required&quot;, 30, 30)), IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001MC3k&quot;, &quot;Client refused&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSTM Outcome_Beki</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSTM_Private_Action_plan__c</fullName>
        <label>Westminster Private Action plan</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSTM_action_required__c</fullName>
        <label>Yellow Star</label>
        <picklist>
            <picklistValues>
                <fullName>Hotspot warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAF - diverted/reconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAF needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAF - refer to A&amp;H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAF - refer to Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAF - refer to Workspace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority - A&amp;H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority - Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconnected - A&amp;H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconnected - Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workspace - warning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSTM_assessment_outcome__c</fullName>
        <label>Red Star</label>
        <picklist>
            <picklistValues>
                <fullName>Disengaged from workspace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diverted to Embassy because of language barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other agency client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused housing offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused reconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to sign confidentiality waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to engage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSTM_new_client__c</fullName>
        <formula>If(  OR(ISBLANK(First_accessed_day_night_centre_CSTM__c),First_accessed_day_night_centre_CSTM__c   =today()), IF(OR (ISBLANK(First_seen_RS_CSTM_apex__c), First_seen_RS_CSTM_apex__c  = today()),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3XW&quot;, &quot;tick&quot;, 20, 20),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3Xb&quot;, &quot;cross&quot;, 20, 20)),IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001M3Xb&quot;, &quot;cross&quot;, 20, 20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSTM new client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSTM_new_to_CHAIN_Plus__c</fullName>
        <formula>If( OR(ISBLANK(First_accessed_day_night_centre_CSTM__c),First_accessed_day_night_centre_CSTM__c &gt;=DATEVALUE(&quot;2011-04-04&quot;)), IF(OR (ISBLANK( Most_recent_CSTM_TLE_apex__c ), Most_recent_CSTM_TLE_apex__c  &gt;= DATEVALUE(&quot;2011-04-04&quot;)),1,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSTM new to CHAIN Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSTM_very_private_action_plan__c</fullName>
        <label>CSTM Private action plan</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSTM_vprivate_action_plan_last_edited__c</fullName>
        <label>CSTM Private action plan last edited</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_leaver_2__c</fullName>
        <inlineHelpText>Select not known if client is asked about their care history but cannot answer yes or no</inlineHelpText>
        <label>Care leaver</label>
        <picklist>
            <picklistValues>
                <fullName>Not selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cause_of_death__c</fullName>
        <label>Cause of death</label>
        <picklist>
            <picklistValues>
                <fullName>Drug Overdose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Related Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Causes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <description>System generated Client ID</description>
        <displayFormat>CH{000000}</displayFormat>
        <externalId>true</externalId>
        <label>ClientID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Consent_CSTM__c</fullName>
        <label>Consent (CSTM)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Date__c</fullName>
        <label>Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Passage__c</fullName>
        <label>Consent (Passage)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent__c</fullName>
        <inlineHelpText>Only select &apos;exempt&apos; if client is not able to make an informed decision. All cases of &apos;exempt&apos; should be revisited when possible.</inlineHelpText>
        <label>Consent Given</label>
        <picklist>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consent_missing__c</fullName>
        <formula>If( ISPICKVAL(Consent__c,&quot;Written&quot;) ,&quot;&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=015C0000001sRzm&quot;, &quot;written consent missing&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent missing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contributing_factors__c</fullName>
        <label>Contributing factors</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical health</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Count_of_BBS_Stage_1s_Passage__c</fullName>
        <description>Count of BBS Stage 1 assessments completed by Passage</description>
        <label>Count of BBS Stage 1s (Passage)</label>
        <summaryFilterItems>
            <field>Support_Needs_Lifestyle__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Stage 1 assessment (BBS)</value>
        </summaryFilterItems>
        <summaryForeignKey>Support_Needs_Lifestyle__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Morgan_s_TLEs__c</fullName>
        <label>Count of Morgan&apos;s TLEs</label>
        <summaryFilterItems>
            <field>Timeline_Event__c.CreatedById</field>
            <operation>equals</operation>
            <value>00580000003J4Iz</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Timeline_Event__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2013 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>Timeline_Event__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_NSNO_Hub_attendances_apex__c</fullName>
        <label>Count of NSNO Hub attendances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_RS_TLEs_apex__c</fullName>
        <label>Count of RS TLEs_apex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>